# FailsPrototype

./: CMakeLists.txt  README.md  conanfile.txt
src/: main.cpp
src/cfg/: botkey.h.in
src/plugins/: CMakeLists.txt
src/tgbotlib/: CMakeLists.txt  bot_network.h  network.cpp  writefn_data.c  writefn_data.h
